--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
             <button class="dropdown-btn" onclick="toggleDropdown(this)">Blogs</button>
             <div class="dropdown-content">
                 <a href="#" onclick="showBlog('blogs/blog1.html'); return false;">🍥 E2E SAE</a>
+                <a href="https://chaitalibh.notion.site/DIP-23af41c398a94c89bfc53a95940a816f" target="_blank">🍥 Deep Image Prior</a>
+                <a href="https://medium.com/@chaitalibh.cb/detailed-and-visual-explanation-convolutional-neural-networks-42c89756f593" target="_blank">🍥 CNN</a>
+                    <a href="https://medium.com/@chaitalibh.cb/camera-calibration-with-checkerboard-54f93af742a0" target="_blank">🍥 Camera Calibration</a>
+
+
+
+
                 <!-- <a href="#" onclick="showBlog('blog2.html'); return false;">🍥 Transformer</a>
                 <a href="#" onclick="showBlog('blog3.html'); return false;">🍥 Sparse Autoencoder</a> -->
             </div>
